--- a/project.html
+++ b/project.html
@@ -23,9 +23,11 @@
             font-family: 'Roboto', sans-serif;
         }
         .center {
-  margin-left: 290px; 
-  width: 100%;
-  padding: 10px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
         .card {
